Optimized weight calculation using JPA Query